--- a/.github/workflows/test-versions.yml
+++ b/.github/workflows/test-versions.yml
@@ -7,6 +7,6 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: afichet/openexr-viewer@6f545365496f8cad0bdbe8765fc8a5af3127a7e1 # v0.4.1
+      - uses: afichet/openexr-viewer@v0.4.1
       - run: |
           echo "Hello world!"
